--- a/frontend/sfpd_theft_app/src/index.css
+++ b/frontend/sfpd_theft_app/src/index.css
@@ -1,9 +1,8 @@
 body {
   margin: 0;
   padding:5px 40px;
-  background-color: #e2e8f0;
-  background-color: #f1f5f9;
-
+  /* background-color: #e2e8f0;
+  background-color: #f1f5f9; */
   color:#0f172a;
   ;
 
@@ -38,3 +37,4 @@ h3 {
 h4 {
   font-weight: 500;
 }
+
