--- a/frontend/sfpd_theft_app/src/index.css
+++ b/frontend/sfpd_theft_app/src/index.css
@@ -23,8 +23,9 @@ code {
 h1 {
   font-weight: 700;
   @media (max-width: 868px) {
-    font-size: 24px;
+    font-size: 22px;
     margin-bottom: 0px;
+    padding-bottom: 0px;
   }
 }
 
