improved select dropdown styling, applied consistent font

--- a/frontend/sfpd_theft_app/src/index.css
+++ b/frontend/sfpd_theft_app/src/index.css
@@ -23,6 +23,9 @@ code {
 
 /* index.css */
 
+p {
+  font-family: 'Inter', sans-serif;
+}
 h1 {
   font-weight: 700;
   font-family: 'Metropolis', sans-serif;
