--- a/frontend/sfpd_theft_app/src/index.css
+++ b/frontend/sfpd_theft_app/src/index.css
@@ -28,7 +28,7 @@ p {
 
 }
 h1 {
-  font-weight: 700;
+  font-weight: 500;
   font-family: 'Metropolis', sans-serif;
   @media (max-width: 868px) {
     font-size: 22px;
@@ -38,13 +38,14 @@ h1 {
 }
 
 h2 {
-  font-weight: 600;
+  font-weight: 500;
   font-family: 'Metropolis', sans-serif;
 
 }
 
 h3 {
-  font-weight: 600;
+  font-weight: 500;
+  font-size: 20px;
   font-family: 'Metropolis', sans-serif;
   @media (max-width: 868px) {
     font-size: 17px;
@@ -52,7 +53,7 @@ h3 {
 }
 
 h4 {
-  font-weight: 600;
+  font-weight: 500;
 }
 
 @font-face {
